# ServerlessConanServer

./: .env.example  .gitignore  ARCHITECTURE.md  CONAN_CLIENT_GUIDE.md  CONAN_TESTING_GUIDE.md  DEPLOYMENT.md  QUICKSTART.md  README.md  UPLOAD_GUIDE.md  add-user.sh  change-password.sh  conan-sst-deploy-policy.json  demo-end-to-end.sh  deploy.sh  manage.sh  package-lock.json  package.json  remove.sh  run-conan1-demo.sh  sst.config.ts  test-connection.sh  tsconfig.json  view-logs.sh
demo/consumer/: CMakeLists.txt  conanfile.txt  main.cpp
demo/mymath-library/: CMakeLists.txt  conanfile.py
demo/mymath-library/include/: mymath.h
demo/mymath-library/src/: mymath.cpp
docs/: PERMISSIONS_GUIDE.md  USER_GUIDE.md
functions/: api.ts
scripts/: init-users.mjs  init-users.ts  verify_fix.cjs
stacks/: ConanServerStack.ts
tests/: run-conan1-demo.sh  test-api.sh  test-permissions.sh
